v0.0.1/modules/schema/pages/class/MarketStatementLineItem.adoc
= `MarketStatementLineItem`
:toclevels: 4


+++An individual line item on an ISO settlement statement.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MarketStatementLineItem`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`MarketStatementLineItem`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
MarketStatementLineItem {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketStatementLineItem {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketStatement {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MktUserAttribute {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketStatementLineItem {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



PassThroughBill {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




MarketStatementLineItem -> MarketStatementLineItem: ContainerMarketStatementLineItem


MarketStatementLineItem -> MarketStatement: MarketStatement


MarketStatementLineItem -> MktUserAttribute: MktUserAttribute


MarketStatementLineItem -> MarketStatementLineItem: ComponentMarketStatementLineItem


MarketStatementLineItem -> PassThroughBill: PassThroughBill


MarketStatementLineItem -> DiagramObject: DiagramObjects


MarketStatementLineItem -> InstanceSet: InstanceSet


MarketStatementLineItem -> Name: Names


MarketStatementLineItem -> ChangeSetMember: PropertiesCIMDataObject


MarketStatementLineItem -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<MarketStatement,`MarketStatement`>>
| 1
| xref::class/MarketStatement.adoc[`MarketStatement`]
| n/a

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<ContainerMarketStatementLineItem,`ContainerMarketStatementLineItem`>>
| 0..1
| xref::class/MarketStatementLineItem.adoc[`MarketStatementLineItem`]
| n/a

| <<PassThroughBill,`PassThroughBill`>>
| 0..1
| xref::class/PassThroughBill.adoc[`PassThroughBill`]
| n/a

| <<currentAmount,`currentAmount`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Current settlement amount.+++

| <<currentISOAmount,`currentISOAmount`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Current ISO settlement amount.+++

| <<currentISOQuantity,`currentISOQuantity`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Current ISO settlement quantity.+++

| <<currentPrice,`currentPrice`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Current settlement price.+++

| <<currentQuantity,`currentQuantity`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Current settlement quantity, subject to the UOM.+++

| <<intervalDate,`intervalDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The date of which the settlement is run.+++

| <<intervalNumber,`intervalNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The number of intervals.+++

| <<netAmount,`netAmount`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Net settlement amount.+++

| <<netISOAmount,`netISOAmount`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Net ISO settlement amount.+++

| <<netISOQuantity,`netISOQuantity`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Net ISO settlement quantity.+++

| <<netPrice,`netPrice`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Net settlement price.+++

| <<netQuantity,`netQuantity`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Net settlement quantity, subject to the UOM.+++

| <<previousAmount,`previousAmount`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Previous settlement amount.+++

| <<previousISOAmount,`previousISOAmount`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Previous ISO settlement amount.+++

| <<previousISOQuantity,`previousISOQuantity`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Previous ISO settlement quantity.+++

| <<previousPrice,`previousPrice`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Previous settlement price.+++

| <<previousQuantity,`previousQuantity`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Previous settlement quantity, subject to the UOM.+++

| <<quantityUOM,`quantityUOM`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The unit of measure for the quantity element of the line item.+++

| <<ComponentMarketStatementLineItem,`ComponentMarketStatementLineItem`>>
| 0..*
| xref::class/MarketStatementLineItem.adoc[`MarketStatementLineItem`]
| n/a

| <<MktUserAttribute,`MktUserAttribute`>>
| 0..*
| xref::class/MktUserAttribute.adoc[`MktUserAttribute`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ComponentMarketStatementLineItem]
=== `ComponentMarketStatementLineItem`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.ComponentMarketStatementLineItem`
| Cardinality
| 0..*
| Type
| xref::class/MarketStatementLineItem.adoc[`MarketStatementLineItem`]


|===

//[discrete]
[#ContainerMarketStatementLineItem]
=== `ContainerMarketStatementLineItem`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.ContainerMarketStatementLineItem`
| Cardinality
| 0..1
| Type
| xref::class/MarketStatementLineItem.adoc[`MarketStatementLineItem`]


|===

//[discrete]
[#currentAmount]
=== `currentAmount`
+++Current settlement amount.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.currentAmount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#currentISOAmount]
=== `currentISOAmount`
+++Current ISO settlement amount.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.currentISOAmount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#currentISOQuantity]
=== `currentISOQuantity`
+++Current ISO settlement quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.currentISOQuantity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#currentPrice]
=== `currentPrice`
+++Current settlement price.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.currentPrice`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#currentQuantity]
=== `currentQuantity`
+++Current settlement quantity, subject to the UOM.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.currentQuantity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#intervalDate]
=== `intervalDate`
+++The date of which the settlement is run.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.intervalDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#intervalNumber]
=== `intervalNumber`
+++The number of intervals.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.intervalNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#MarketStatement]
=== `MarketStatement`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.MarketStatement`
| Cardinality
| 1
| Type
| xref::class/MarketStatement.adoc[`MarketStatement`]


|===

//[discrete]
[#MktUserAttribute]
=== `MktUserAttribute`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.MktUserAttribute`
| Cardinality
| 0..*
| Type
| xref::class/MktUserAttribute.adoc[`MktUserAttribute`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#netAmount]
=== `netAmount`
+++Net settlement amount.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.netAmount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#netISOAmount]
=== `netISOAmount`
+++Net ISO settlement amount.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.netISOAmount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#netISOQuantity]
=== `netISOQuantity`
+++Net ISO settlement quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.netISOQuantity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#netPrice]
=== `netPrice`
+++Net settlement price.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.netPrice`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#netQuantity]
=== `netQuantity`
+++Net settlement quantity, subject to the UOM.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.netQuantity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#PassThroughBill]
=== `PassThroughBill`


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.PassThroughBill`
| Cardinality
| 0..1
| Type
| xref::class/PassThroughBill.adoc[`PassThroughBill`]


|===

//[discrete]
[#previousAmount]
=== `previousAmount`
+++Previous settlement amount.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.previousAmount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#previousISOAmount]
=== `previousISOAmount`
+++Previous ISO settlement amount.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.previousISOAmount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#previousISOQuantity]
=== `previousISOQuantity`
+++Previous ISO settlement quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.previousISOQuantity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#previousPrice]
=== `previousPrice`
+++Previous settlement price.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.previousPrice`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#previousQuantity]
=== `previousQuantity`
+++Previous settlement quantity, subject to the UOM.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.previousQuantity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#quantityUOM]
=== `quantityUOM`
+++The unit of measure for the quantity element of the line item.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.quantityUOM`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


