v1.1.0/modules/schema/pages/class/MarketStatementLineItem.adoc
= `MarketStatementLineItem`
:toclevels: 4


+++An individual line item on an ISO settlement statement.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MarketStatementLineItem`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`MarketStatementLineItem`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<ComponentMarketStatementLineItem,`ComponentMarketStatementLineItem`>>
//| [[slots_table.ComponentMarketStatementLineItem]]<<ComponentMarketStatementLineItem,`ComponentMarketStatementLineItem`>>
| 0..* +
xref::class/MarketStatementLineItem.adoc[`MarketStatementLineItem`]
| _n/a_
| _n/a_

| <<ContainerMarketStatementLineItem,`ContainerMarketStatementLineItem`>>
//| [[slots_table.ContainerMarketStatementLineItem]]<<ContainerMarketStatementLineItem,`ContainerMarketStatementLineItem`>>
| 0..1 +
xref::class/MarketStatementLineItem.adoc[`MarketStatementLineItem`]
| _n/a_
| _n/a_

| <<MarketStatement,`MarketStatement`>>
//| [[slots_table.MarketStatement]]<<MarketStatement,`MarketStatement`>>
| 1 +
xref::class/MarketStatement.adoc[`MarketStatement`]
| _n/a_
| _n/a_

| <<MktUserAttribute,`MktUserAttribute`>>
//| [[slots_table.MktUserAttribute]]<<MktUserAttribute,`MktUserAttribute`>>
| 0..* +
xref::class/MktUserAttribute.adoc[`MktUserAttribute`]
| _n/a_
| _n/a_

| <<PassThroughBill,`PassThroughBill`>>
//| [[slots_table.PassThroughBill]]<<PassThroughBill,`PassThroughBill`>>
| 0..1 +
xref::class/PassThroughBill.adoc[`PassThroughBill`]
| _n/a_
| _n/a_

| <<currentAmount,`currentAmount`>>
//| [[slots_table.currentAmount]]<<currentAmount,`currentAmount`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Current settlement amount.+++
| _n/a_

| <<currentISOAmount,`currentISOAmount`>>
//| [[slots_table.currentISOAmount]]<<currentISOAmount,`currentISOAmount`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Current ISO settlement amount.+++
| _n/a_

| <<currentISOQuantity,`currentISOQuantity`>>
//| [[slots_table.currentISOQuantity]]<<currentISOQuantity,`currentISOQuantity`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Current ISO settlement quantity.+++
| _n/a_

| <<currentPrice,`currentPrice`>>
//| [[slots_table.currentPrice]]<<currentPrice,`currentPrice`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Current settlement price.+++
| _n/a_

| <<currentQuantity,`currentQuantity`>>
//| [[slots_table.currentQuantity]]<<currentQuantity,`currentQuantity`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Current settlement quantity, subject to the UOM.+++
| _n/a_

| <<intervalDate,`intervalDate`>>
//| [[slots_table.intervalDate]]<<intervalDate,`intervalDate`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The date of which the settlement is run.+++
| _n/a_

| <<intervalNumber,`intervalNumber`>>
//| [[slots_table.intervalNumber]]<<intervalNumber,`intervalNumber`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The number of intervals.+++
| _n/a_

| <<netAmount,`netAmount`>>
//| [[slots_table.netAmount]]<<netAmount,`netAmount`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Net settlement amount.+++
| _n/a_

| <<netISOAmount,`netISOAmount`>>
//| [[slots_table.netISOAmount]]<<netISOAmount,`netISOAmount`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Net ISO settlement amount.+++
| _n/a_

| <<netISOQuantity,`netISOQuantity`>>
//| [[slots_table.netISOQuantity]]<<netISOQuantity,`netISOQuantity`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Net ISO settlement quantity.+++
| _n/a_

| <<netPrice,`netPrice`>>
//| [[slots_table.netPrice]]<<netPrice,`netPrice`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Net settlement price.+++
| _n/a_

| <<netQuantity,`netQuantity`>>
//| [[slots_table.netQuantity]]<<netQuantity,`netQuantity`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Net settlement quantity, subject to the UOM.+++
| _n/a_

| <<previousAmount,`previousAmount`>>
//| [[slots_table.previousAmount]]<<previousAmount,`previousAmount`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Previous settlement amount.+++
| _n/a_

| <<previousISOAmount,`previousISOAmount`>>
//| [[slots_table.previousISOAmount]]<<previousISOAmount,`previousISOAmount`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Previous ISO settlement amount.+++
| _n/a_

| <<previousISOQuantity,`previousISOQuantity`>>
//| [[slots_table.previousISOQuantity]]<<previousISOQuantity,`previousISOQuantity`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Previous ISO settlement quantity.+++
| _n/a_

| <<previousPrice,`previousPrice`>>
//| [[slots_table.previousPrice]]<<previousPrice,`previousPrice`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Previous settlement price.+++
| _n/a_

| <<previousQuantity,`previousQuantity`>>
//| [[slots_table.previousQuantity]]<<previousQuantity,`previousQuantity`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Previous settlement quantity, subject to the UOM.+++
| _n/a_

| <<quantityUOM,`quantityUOM`>>
//| [[slots_table.quantityUOM]]<<quantityUOM,`quantityUOM`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The unit of measure for the quantity element of the line item.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#ComponentMarketStatementLineItem]
=== `ComponentMarketStatementLineItem`



[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.ComponentMarketStatementLineItem`
| Cardinality
| 0..*
| Type
| xref::class/MarketStatementLineItem.adoc[`MarketStatementLineItem`]


|===

////
[.text-left]
--
<<slots_table.ComponentMarketStatementLineItem,&#10548;>>
--
////


//[discrete]
[#ContainerMarketStatementLineItem]
=== `ContainerMarketStatementLineItem`



[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.ContainerMarketStatementLineItem`
| Cardinality
| 0..1
| Type
| xref::class/MarketStatementLineItem.adoc[`MarketStatementLineItem`]


|===

////
[.text-left]
--
<<slots_table.ContainerMarketStatementLineItem,&#10548;>>
--
////


//[discrete]
[#currentAmount]
=== `currentAmount`
+++Current settlement amount.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.currentAmount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.currentAmount,&#10548;>>
--
////


//[discrete]
[#currentISOAmount]
=== `currentISOAmount`
+++Current ISO settlement amount.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.currentISOAmount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.currentISOAmount,&#10548;>>
--
////


//[discrete]
[#currentISOQuantity]
=== `currentISOQuantity`
+++Current ISO settlement quantity.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.currentISOQuantity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.currentISOQuantity,&#10548;>>
--
////


//[discrete]
[#currentPrice]
=== `currentPrice`
+++Current settlement price.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.currentPrice`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.currentPrice,&#10548;>>
--
////


//[discrete]
[#currentQuantity]
=== `currentQuantity`
+++Current settlement quantity, subject to the UOM.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.currentQuantity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.currentQuantity,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#intervalDate]
=== `intervalDate`
+++The date of which the settlement is run.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.intervalDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.intervalDate,&#10548;>>
--
////


//[discrete]
[#intervalNumber]
=== `intervalNumber`
+++The number of intervals.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.intervalNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.intervalNumber,&#10548;>>
--
////


//[discrete]
[#MarketStatement]
=== `MarketStatement`



[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.MarketStatement`
| Cardinality
| 1
| Type
| xref::class/MarketStatement.adoc[`MarketStatement`]


|===

////
[.text-left]
--
<<slots_table.MarketStatement,&#10548;>>
--
////


//[discrete]
[#MktUserAttribute]
=== `MktUserAttribute`



[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.MktUserAttribute`
| Cardinality
| 0..*
| Type
| xref::class/MktUserAttribute.adoc[`MktUserAttribute`]


|===

////
[.text-left]
--
<<slots_table.MktUserAttribute,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#netAmount]
=== `netAmount`
+++Net settlement amount.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.netAmount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.netAmount,&#10548;>>
--
////


//[discrete]
[#netISOAmount]
=== `netISOAmount`
+++Net ISO settlement amount.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.netISOAmount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.netISOAmount,&#10548;>>
--
////


//[discrete]
[#netISOQuantity]
=== `netISOQuantity`
+++Net ISO settlement quantity.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.netISOQuantity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.netISOQuantity,&#10548;>>
--
////


//[discrete]
[#netPrice]
=== `netPrice`
+++Net settlement price.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.netPrice`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.netPrice,&#10548;>>
--
////


//[discrete]
[#netQuantity]
=== `netQuantity`
+++Net settlement quantity, subject to the UOM.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.netQuantity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.netQuantity,&#10548;>>
--
////


//[discrete]
[#PassThroughBill]
=== `PassThroughBill`



[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.PassThroughBill`
| Cardinality
| 0..1
| Type
| xref::class/PassThroughBill.adoc[`PassThroughBill`]


|===

////
[.text-left]
--
<<slots_table.PassThroughBill,&#10548;>>
--
////


//[discrete]
[#previousAmount]
=== `previousAmount`
+++Previous settlement amount.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.previousAmount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.previousAmount,&#10548;>>
--
////


//[discrete]
[#previousISOAmount]
=== `previousISOAmount`
+++Previous ISO settlement amount.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.previousISOAmount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.previousISOAmount,&#10548;>>
--
////


//[discrete]
[#previousISOQuantity]
=== `previousISOQuantity`
+++Previous ISO settlement quantity.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.previousISOQuantity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.previousISOQuantity,&#10548;>>
--
////


//[discrete]
[#previousPrice]
=== `previousPrice`
+++Previous settlement price.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.previousPrice`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.previousPrice,&#10548;>>
--
////


//[discrete]
[#previousQuantity]
=== `previousQuantity`
+++Previous settlement quantity, subject to the UOM.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.previousQuantity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.previousQuantity,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#quantityUOM]
=== `quantityUOM`
+++The unit of measure for the quantity element of the line item.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MarketStatementLineItem.quantityUOM`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.quantityUOM,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/MarketStatement.adoc[`MarketStatement`] | xref::class/MarketStatement.adoc#MarketStatementLineItem[`MarketStatementLineItem`]



| xref::class/MarketStatementLineItem.adoc[`MarketStatementLineItem`] | xref::class/MarketStatementLineItem.adoc#ComponentMarketStatementLineItem[`ComponentMarketStatementLineItem`]



| xref::class/MktUserAttribute.adoc[`MktUserAttribute`] | xref::class/MktUserAttribute.adoc#MarketStatementLineItem[`MarketStatementLineItem`]



| xref::class/PassThroughBill.adoc[`PassThroughBill`] | xref::class/PassThroughBill.adoc#MarketStatementLineItem[`MarketStatementLineItem`]


|===

